# codecov-api

./: .deep-dive.yaml  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .graphqlconfig  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .test_durations  Dockerfile  Dockerfile.base  Dockerfile.circle  Dockerfile.circle-enterprise  Dockerfile.development  Dockerfile.enterprise  Dockerfile.enterprise_runtime  Dockerfile.local-enterprise  Dockerfile.portable  Dockerfile.production  Dockerfile.requirements  LICENSE  Makefile  Makefile.circle  README.md  VERSION  a.json  aa.json  api-doc.txt  api.sh  async_orm_checker.py  celery_config.py  ci.yml  codecov-api  codecov.yml  conftest.py  dev  dev.sh  development.yml  docker-compose-enterprise.yml  (+27 more)
.circleci/: config.yml  local.yml
.circleci/docker/: Dockerfile.deploy  Makefile
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: cache_cleanup.yml  ci.yml  defender-for-devops.yml  gitleaks.yml  mypy.yml  pr_detect_shared_changes.yml  push-env.yml  self-hosted-release-pr.yml  self-hosted-release.yml  self-hosted.yml  upload-overwatch.yml
api/: apps.py  urls.py  views.py
api/gen_ai/: bank.py  math.py  serializers.py  urls.py  views.py
api/internal/: constants.py  enterprise_urls.py  urls.py
api/shared/: error_views.py  middleware.py  mixins.py  owner_permissions.py  pagination.py  permissions.py  serializers.py
archive/: apps.py  services.py  storage.py
archive/tests/: test_services.py
billing/: accounts.py  apps.py  constants.py  helpers.py  models.py  urls.py  views.py
billing/migrations/: 0001_initial.py  0002_auto_20220118_1232.py  0003_delete_account.py
billing/tests/: test_accounts.py  test_helpers.py  test_invoice.py  test_invoice_failure.py  test_invoice_functions.py  test_payment_method_handlers.py  test_subscription_handlers.py  test_views.py  test_views_webhook_handlers.py  test_webhook_handler.py  test_webhooks.py
codecov/: a.html  admin.py  db.py  forms.py  models.py  rate_limiter.py  sentiment.py  sentiment_test.py  settings.py  settings_base.py  settings_dev.py  settings_enterprise.py  settings_prod.py  settings_staging.py  settings_test.py  urls.py  views.py  wsgi.py
codecov/commands/: base.py  exceptions.py  executor.py
codecov/db/: __init__.py  base.py
codecov/graphs/: urls.py  views.py
codecov/tests/: base_test.py  test-sentiment.py  test_sentiment.py  test_urls.py  test_views.py
codecov_auth/: admin.py  apps.py  authentication.py  constants.py  helpers.py  managers.py  middleware.py  models.py  permissions.py  signals.py  urls.py
codecov_auth/authentication/: __init__.py  helpers.py  repo_auth.py  types.py
codecov_auth/migrations/: 0001_initial.py  0002_auto_20190116_1455.py  0002_auto_20210413_1619.py  0002_auto_20210817_1346.py  0002_owner_plan.py  0003_auto_20200221_1919.py  0003_auto_20210924_0956.py  0003_auto_20210924_1003.py  0004_auto_20200221_1919.py  0004_auto_20210930_1429.py  0005_auto_20200508_2014.py  0005_auto_20211029_1709.py  0006_auto_20211123_1535.py  0006_owner_student.py  0007_auto_20200811_1631.py  0007_auto_20211129_1228.py  0008_auto_20200811_1632.py  0008_auto_20220119_1811.py  0009_auto_20220510_1538.py  0009_auto_20220511_1313.py  0009_owner_is_superuser.py  0009_session_type.py  0010_auto_20200916_2017.py  0010_owner_is_superuser.py  0011_auto_20220525_1149.py  0011_new_enterprise_plans.py  0011_owner_plan_provider.py  0012_auto_20220531_1452.py  0012_owner_parent_service_id.py  0013_alter_owner_organizations.py  0013_owner_root_parent_service_id.py  0014_auto_20210218_1341.py  (+69 more)
compare/: admin.py  models.py  services.py  views.py
core/: admin.py  apps.py  encoders.py  managers.py  middleware.py  models.py  permissions.py  signals.py
docker/: Dockerfile  Dockerfile-proxy  Dockerfile.requirements  Dockerfile.self-hosted  Dockerfile.self-hosted-runtime  codecov.yml  frpc-entrypoint.sh  frpc.ini  test.yml
enterprise/: config.py  cythonize.sh  enterprise_cleanup.sh  enterprise_compile.py  generate_pyinstaller_args.py  package.sh  pyi_rth_django.py  setup.py
graphql_api/: apps.py  ariadne.py  config.py  context.py  executor.py  graphene.py  helpers.py  schema.graphql  schema.py  tracing.py  urls.py  validation.py  views.py
graphs/: mixins.py  settings.py  urls.py  views.py
internal_api/: apps.py  constants.py  enterprise_urls.py  error_views.py  exception_handler.py  mixins.py  pagination.py  permissions.py  routers.py  serializers.py  urls.py  views.py
labelanalysis/: apps.py  models.py  serializers.py  urls.py  views.py
legacy_migrations/: apps.py  models.py
plan/: constants.py  service.py  test_plan.py
profiling/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
public_api/: apps.py  models.py  permissions.py  urls.py  views.py
repo_providers/: apps.py  services.py  tests.py
reports/: admin.py  apps.py  managers.py  models.py
rollouts/: __init__.py
security_breach/: models.py
services/: __init__.py  activation.py  analytics.py  archive.py  billing.py  bundle_analysis.py  comparison.py  components.py  decorators.py  path.py  plan.py  profiling.py  redis.py  redis_configuration.py  refresh.py  repo_providers.py  report.py  segment.py  self_hosted.py  sentry.py  storage.py  task.py  yaml.py
staticanalysis/: apps.py  models.py  serializers.py  urls.py  views.py
tier/: constants.py  service.py  test_tier.py
timeseries/: admin.py  helpers.py  models.py
upload/: constants.py  helpers.py  metrics.py  serializers.py  throttles.py  tokenless.py  urls.py  views.py
user_measurements/: models.py  partitioning.py
utils/: __init__.py  cache.py  config.py  encoders.py  encryption.py  github.py  logging.py  logging_configuration.py  migrations.py  model_utils.py  repos.py  rollouts.py  routers.py  sentiment.py  services.py  shelter.py  temp_branch_fix.py  test_results.py  test_utils.py  uploads_used.py  version.py
validate/: urls.py  views.py
webhook_handlers/: constants.py  tests.py  urls.py  views.py
(+1350 files in other folders)
