[project]
name = "codecov-api"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodataloader",
    "ariadne==0.23",
    "ariadne-django==0.3.0",
    "celery>=5.3.6",
    "cerberus",
    "certifi>=2024.7.4",
    "ddtrace",
    "django-autocomplete-light",
    "django-better-admin-arrayfield",
    "django-cors-headers",
    "django-csp",
    "django-dynamic-fixture",
    "django-filter",
    "django-model-utils",
    "django-postgres-extra>=2.0.8",
    "django-prometheus",
    "django>=4.2.16",
    "djangorestframework==3.15.2",
    "drf-spectacular",
    "drf-spectacular-sidecar",
    "elastic-apm",
    "freezegun",
    "google-cloud-pubsub",
    "gunicorn>=22.0.0",
    "idna>=3.7",
    "minio",
    "oauth2==1.9.0.post1",
    "opentelemetry-instrumentation-django>=0.45b0",
    "opentelemetry-sdk>=1.24.0",
    "opentracing",
    "polars==1.12.0",
    "pre-commit",
    "psycopg2",
    "pydantic",
    "pyjwt",
    "python-dateutil",
    "python-json-logger",
    "python-redis-lock",
    "pytz",
    "redis",
    "regex",
    "requests",
    "sentry-sdk>=2.13.0",
    "sentry-sdk[celery]",
    "setproctitle",
    "simplejson",
    "starlette==0.40.0",
    "stripe>=11.4.1",
    "urllib3>=1.26.19",
    "vcrpy",
    "whitenoise",
    "ruff>=0.9.6",
]

[tool.uv]
dev-dependencies = [
    "factory-boy",
    "fakeredis",
    "freezegun",
    "pre-commit",
    "pytest>=7.2.0",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-django",
    "pytest-mock",
    "pytest-split",
    "vcrpy",
]

[tool.uv.sources]
codecovopentelem = { git = "https://github.com/codecov/opentelem-python", rev = "df1e241927d4794fc0e24f96431f0fb730edac21" }
shared = { git = "https://github.com/codecov/shared", rev = "9c31870de026a8a3f026f0753b1991e8c832fadb" }
