[project]
name = "codecov-api"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodataloader==0.4.0",
    "ariadne==0.23.0",
    "ariadne-django==0.3.0",
    "celery>=5.3.6",
    "cerberus==1.3.5",
    "certifi>=2024.7.4",
    "django-autocomplete-light==3.11.0",
    "django-better-admin-arrayfield==1.4.2",
    "django-cors-headers==3.7.0",
    "django-csp==3.8.0",
    "django-cursor-pagination==0.3.0",
    "django-dynamic-fixture==3.1.1",
    "django-filter==2.4.0",
    "django-model-utils==4.5.1",
    "django-postgres-extra>=2.0.8",
    "django-prometheus==2.3.1",
    "django>=4.2.16",
    "djangorestframework==3.15.2",
    "drf-spectacular==0.26.2",
    "drf-spectacular-sidecar==2023.3.1",
    "google-cloud-pubsub>=2.18.4",
    "grpcio>=1.66.2",
    "gunicorn>=22.0.0",
    "idna>=3.7",
    "minio==7.1.13",
    "multidict>=6.1.0",
    "oauth2==1.9.0.post1",
    "opentelemetry-instrumentation-django>=0.45b0",
    "opentelemetry-sdk>=1.24.0",
    "polars==1.12.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.9.0",
    "pyjwt>=2.4.0",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==2.0.7",
    "python-redis-lock==4.0.0",
    "pytz==2022.1",
    "redis==4.4.4",
    "regex==2023.12.25",
    "requests==2.32.3",
    "sentry-sdk>=2.13.0",
    "sentry-sdk[celery]==2.13.0",
    "shared",
    "simplejson==3.17.2",
    "starlette==0.40.0",
    "stripe>=11.4.1",
    "whitenoise==5.2.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
dev-dependencies = [
    "factory-boy>=3.2.0",
    "fakeredis==2.10.3",
    "freezegun>=1.5.1",
    "pre-commit>=3.4.0",
    "pytest>=8.1.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.14.0",
    "pytest-django==4.8.0",
    "pytest-insta>=0.3.0",
    "pytest-mock==3.14.0",
    "urllib3==1.26.19",
    "vcrpy>=6.0.1",
    "ruff>=0.9.6",
]

[tool.uv.sources]
shared = { git = "https://github.com/codecov/shared", rev = "82e98e56baee294be3e183a4411161fec8b67928" }
